welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: type color
def faireV(c:color) {
             ^MethodsPicture:20: error: not found: value color
faireV(color.YELLOW)
       ^